--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   ========================================================================
   -->
   <!-- Page Title -->
-  <title>Alexio - Personal Portfolio</title>
+  <title>Kirandeep Kaur - Personal Portfolio</title>
   <!-- / -->
 
   <!---Font Icon-->
@@ -86,18 +86,18 @@
               <div class="page-content">
                 <div class="v-center-box d-flex align-items-center">
                   <div class="home-text">
-                    <h6 class="dark-color theme-after">Hello, There</h6>
-                    <h1 class="dark-color blue-after">I'm Alexis Larten</h1>
-                    <p>WEB <span id="type-it"></span></p>
+                    <h6 class="dark-color theme-after">Heya</h6>
+                    <h1 class="dark-color blue-after">I'm Kirandeep Kaur </h1>
+                    <p> <span id="type-it"></span></p>
                     <div class="btn-bar">
-                      <a href="index.html#" class="btn btn-theme">Download CV</a>
+                      <!-- <a href="index.html#" class="btn btn-theme">Download CV</a> -->
                     </div>
                   </div>
                   <ul class="social-icons">
-                    <li><a class="facebook" href="index.html#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a class="twitter" href="index.html#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a class="facebook" href="https://www.facebook.com/kirandeep0000"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a class="twitter" href="https://twitter.com/Kiransraa"><i class="fab fa-twitter"></i></a></li>
                     <li><a class="google" href="index.html#"><i class="fab fa-google-plus-g"></i></a></li>
-                    <li><a class="linkedin" href="index.html#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a class="linkedin" href="https://www.linkedin.com/in/kirandeep-kaur-2aa312106/"><i class="fab fa-linkedin-in"></i></a></li>
                   </ul>
                 </div>
                </div> 
@@ -805,7 +805,7 @@
     ====================
   -->
   <header class="header theme-bg">
-    <div class="logo">ALEXIO</div>
+    <div class="logo">KIRANDEEP KAUR</div>
     <div class="menu-toggle">
         <button class="menu-button"><span>Menu</span></button>
     </div>
