--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- navigation -->
   <nav class="pages-nav">
     <div class="pages-nav__item"><a class="link link--page" href="index.html#home">Home</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="index.html#about">About Us</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="index.html#about">About Me</a></div>
     <div class="pages-nav__item"><a class="link link--page" href="index.html#resume">Resume</a></div>
     <div class="pages-nav__item"><a class="link link--page" href="index.html#portfolio">Portfolio</a></div>
     <div class="pages-nav__item"><a class="link link--page" href="index.html#contact">Contact Me</a></div>
@@ -96,7 +96,6 @@
                   <ul class="social-icons">
                     <li><a class="facebook" href="https://www.facebook.com/kirandeep0000"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a class="twitter" href="https://twitter.com/Kiransraa"><i class="fab fa-twitter"></i></a></li>
-                    <li><a class="google" href="index.html#"><i class="fab fa-google-plus-g"></i></a></li>
                     <li><a class="linkedin" href="https://www.linkedin.com/in/kirandeep-kaur-2aa312106/"><i class="fab fa-linkedin-in"></i></a></li>
                   </ul>
                 </div>
