--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <nav class="pages-nav">
     <div class="pages-nav__item"><a class="link link--page" href="index.html#home">Home</a></div>
     <div class="pages-nav__item"><a class="link link--page" href="index.html#about">About Me</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="index.html#resume">Resume</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="index.html#portfolio">Portfolio</a></div>
+<!--     <div class="pages-nav__item"><a class="link link--page" href="index.html#resume">Resume</a></div>
+ -->    <div class="pages-nav__item"><a class="link link--page" href="index.html#portfolio">Portfolio</a></div>
     <div class="pages-nav__item"><a class="link link--page" href="index.html#contact">Contact Me</a></div>
   </nav>
   <!-- /navigation-->
@@ -146,8 +146,8 @@
                   </div>
                   <div class="col-md-8 md-m-30px-t">
                     <div class="about-text">
-                      <h3 class="dark-color">I'm Alexis Larten</h3>
-                      <p class="m-0px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                      <h3 class="dark-color">I'm Kirandeep Kaur</h3>
+                      <p class="m-0px">I am a software developer turned cryptocurrency trader and is in the industry from last three years.I am a public speaker ans has spoken in many conferences</p>
                     </div> <!-- about-text -->
 
                     <div class="row m-30px-t">
@@ -156,7 +156,7 @@
                           <i class="icon dark-color theme-after ti-ruler-pencil"></i>
                           <div class="feature-content">
                             <h5 class="dark-color">Development</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                            <p>I am proficient in java and javascript development. Sound knowldge of react and vue frameworks along with writing efficient sql queries.</p>
                           </div>
                         </div>
                       </div> <!-- col -->
@@ -165,8 +165,8 @@
                         <div class="feature-box">
                           <i class="icon dark-color theme-after ti-image"></i>
                           <div class="feature-content">
-                            <h5 class="dark-color">Graphic</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                            <h5 class="dark-color">Cryptocurrency Trader</h5>
+                            <p>I am currently actively involved in cryptocurrency trading and have a sound knowledge of all cryptocurrencies and how trading works</p>
                           </div>
                         </div>
                       </div> <!-- col -->
@@ -175,8 +175,8 @@
                         <div class="feature-box">
                           <i class="icon dark-color theme-after ti-brush-alt"></i>
                           <div class="feature-content">
-                            <h5 class="dark-color">Web design</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                            <h5 class="dark-color">Instructor</h5>
+                            <p>I love to meet people and make social connections so I am a udemy instructor sharing and gaining knowledge around the globe. </p>
                           </div>
                         </div>
                       </div> <!-- col -->
@@ -185,17 +185,32 @@
                         <div class="feature-box">
                           <i class="icon dark-color theme-after ti-mobile"></i>
                           <div class="feature-content">
-                            <h5 class="dark-color">Mobile apps</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                            <h5 class="dark-color">Public speaker</h5>
+                            <p>Public speaking gives me access to share my knowledge and ideas with other people So I love to speak publicaly on topics related to development ,Trading and social cause</p>
                           </div>
                         </div>
                       </div> <!-- col -->
                     </div> <!-- row -->
 
-                    <div class="btn-bar">
+
+                    <div class="col-md-6 col-sm-6 m-30px-b">
+                      <div class="feature-box">
+                        <i class="icon dark-color theme-after ti-mobile"></i>
+                        <div class="feature-content">
+                          <h5 class="dark-color">Social Activist</h5>
+                          <p>social activities helps me better understand the world and helping people in need makes me more confident so I am social activist and is a member of many clubs and trying to make world a better place to live for everyone. </p>
+                        </div>
+                      </div>
+                    </div> <!-- col -->
+                  </div> <!-- row -->
+
+
+              
+
+            <!--       <div class="btn-bar">
                       <a href="index.html#" class="btn btn-theme">Download CV</a>
                     </div>
-
+                  -->
                   </div>
                 </div> <!-- row -->
 
@@ -455,6 +470,7 @@
                   Portfolio
                 ==========================
                 -->
+                
                 <div class="portfolio-section">
                   <div class="portfolio-filter m-10px-b">
                     <ul class="filter text-left text-md-center">
