changes for contact me page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="pages-nav__item"><a class="link link--page" href="index.html#home">Home</a></div>
     <div class="pages-nav__item"><a class="link link--page" href="index.html#about">About Me</a></div>
 <!--     <div class="pages-nav__item"><a class="link link--page" href="index.html#resume">Resume</a></div>
- -->    <div class="pages-nav__item"><a class="link link--page" href="index.html#portfolio">Portfolio</a></div>
+ -->    <!-- <div class="pages-nav__item"><a class="link link--page" href="index.html#portfolio">Portfolio</a></div> -->
     <div class="pages-nav__item"><a class="link link--page" href="index.html#contact">Contact Me</a></div>
   </nav>
   <!-- /navigation-->
@@ -747,62 +747,16 @@
                   <div class="col-lg-12 m-30px-b sm-m-15px-b">
                     <div class="contact-form">
                         <h4 class="dark-color font-alt m-20px-b">Say Something</h4>
-                        <form class="contactform" method="post">
-                            <div class="row">
-                              <div class="col-md-6">
-                                <div class="form-group">
-                                  <input id="name" name="name" type="text" placeholder="Name" class="validate form-control" required="">
-                                  <span class="input-focus-effect theme-bg"></span>
-                                </div>
-                                </div>
-                                <div class="col-md-6">
-                                <div class="form-group">
-                                  <input id="email" type="email" placeholder="Email" name="email" class="validate form-control" required="">
-                                  <span class="input-focus-effect theme-bg"></span>
-                                </div>
-                                </div>
-                                <div class="col-md-12">
-                                <div class="form-group">
-                                  <textarea id="message" placeholder="Your Comment" name="message" class="form-control" required=""></textarea>
-                                  <span class="input-focus-effect theme-bg"></span>
-                                </div>
-                               </div>
-                                <div class="col-md-12">
-                                  <div class="send">
-                                     <button class="btn btn-theme" type="submit" name="send"> send message</button>
-                                  </div>
-                                  <span class="output_message"></span>
-                                </div>
-                              </div>
-                        </form>
-                    </div>
+      If you would like to get in touch, please shoot me an email at me@kiran.cc and I’ll try get back to you within a day or so!
+     <br>    
+     or 
+     <br> Ping me directly on 
+   <a href="https://join.slack.com/t/cryptocandleindia/shared_invite/enQtNTAwODY2MjQ1MjA3LTNlOWFlMDRjYmQ3MWNmOTAyZjU0NjBmMDA0YTg5NDVjODEzOGY1ZGMyMzJjNGNkMzE3YzQxZGUzMzRjYjNkZmE"> my slack channel </a>
+  for active communications
+    </div>
                   </div> <!-- col -->
                 </div>
 
-                <div class="row">
-                  <div class="col-md-4 m-15px-tb">
-                    <div class="contact-info">
-                        <i class="theme-color ti-location-pin"></i>
-                        <h6 class="dark-color font-alt">Our Address</h6>
-                        <p>123 Stree New York City , USA 750065.</p>
-                    </div>
-                  </div>
-                  <div class="col-md-4 m-15px-tb">
-                    <div class="contact-info">
-                      <i class="theme-color ti-mobile"></i>
-                      <h6 class="dark-color font-alt">Our Phone</h6>
-                      <p>Office: +004 444 444<br>
-                        Office: +004 444 444<br></p>
-                    </div>
-                  </div>
-                  <div class="col-md-4 m-15px-tb sm-m-0px-b">
-                    <div class="contact-info">
-                        <i class="theme-color ti-email"></i>
-                        <h6 class="dark-color font-alt">Our Email</h6>
-                        <p>info@domain.com<br>contact@domain.com</p>
-                    </div>
-                  </div>
-                </div>
 
               </div> <!-- page-content -->
             </div> <!-- page-scroll  -->
