contact me link not workig

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
   <!-- navigation -->
   <nav class="pages-nav">
-    <div class="pages-nav__item"><a class="link link--page" href="index.html#home">Home</a></div>
-    <div class="pages-nav__item"><a class="link link--page" href="index.html#about">About Me</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="#home">Home</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="#about">About Me</a></div>
 <!--     <div class="pages-nav__item"><a class="link link--page" href="index.html#resume">Resume</a></div>
  -->    <!-- <div class="pages-nav__item"><a class="link link--page" href="index.html#portfolio">Portfolio</a></div> -->
-    <div class="pages-nav__item"><a class="link link--page" href="index.html#contact">Contact Me</a></div>
+    <div class="pages-nav__item"><a class="link link--page" href="#contact">Contact Me</a></div>
   </nav>
   <!-- /navigation-->
 
@@ -202,7 +202,6 @@
                         </div>
                       </div>
                     </div> <!-- col -->
-                  </div> <!-- row -->
 
 
               
