happy clients changes

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <i class="icon dark-color theme-after ti-mobile"></i>
                         <div class="feature-content">
                           <h5 class="dark-color">Social Activist</h5>
-                          <p>social activities helps me better understand the world and helping people in need makes me more confident so I am social activist and is a member of many clubs and trying to make world a better place to live for everyone. </p>
+                          <p>social activities helps me bcodetter understand the world and helping people in need makes me more confident so I am social activist and is a member of many clubs and trying to make world a better place to live for everyone. </p>
                         </div>
                       </div>
                     </div> <!-- col -->
@@ -216,9 +216,9 @@
                 <!-- 
                 ==========================
                   Counter
-                ==========================
+              ==========================
                 -->
-                <div class="counter-row m-50px-t p-40px-t lg-m-35px-t lg-p-25px-t sm-p-15px-t">
+               <!-- <div class="counter-row m-50px-t p-40px-t lg-m-35px-t lg-p-25px-t sm-p-15px-t">
                   <div class="row">
                     <div class="col-md-3 col-sm-6 md-m-15px-tb">
                       <div class="counter-col counter-box">
@@ -228,9 +228,9 @@
                             <h6>Happy Clients</h6>
                         </div>
                       </div>
-                    </div> <!-- col -->
+                    </div> col -->
 
-                    <div class="col-md-3 col-sm-6 md-m-15px-tb">
+                   <!--  <div class="col-md-3 col-sm-6 md-m-15px-tb">
                       <div class="counter-col counter-box">
                         <div class="counter-data" data-count="375">
                             <i class="theme-color ti-headphone"></i>
@@ -238,9 +238,9 @@
                             <h6>Telephonic Talk</h6>
                         </div>
                       </div>
-                    </div> <!-- col -->
-
-                    <div class="col-md-3 col-sm-6 md-m-15px-tb">
+                    </div>col -->
+ 
+             <!--       <div class="col-md-3 col-sm-6 md-m-15px-tb">
                       <div class="counter-col counter-box">
                         <div class="counter-data" data-count="375">
                             <i class="theme-color ti-camera"></i>
@@ -248,9 +248,9 @@
                             <h6>Photo Capture</h6>
                         </div>
                       </div>
-                    </div> <!-- col -->
+                    </div> col -->
 
-                    <div class="col-md-3 col-sm-6 md-m-15px-tb">
+               <!--     <div class="col-md-3 col-sm-6 md-m-15px-tb">
                       <div class="counter-col counter-box">
                         <div class="counter-data" data-count="375">
                             <i class="theme-color ti-thumb-up"></i>
@@ -258,17 +258,17 @@
                             <h6>Projects</h6>
                         </div>
                       </div>
-                    </div> <!-- col -->
+                    </div>  col -->
 
-                  </div> <!-- row -->
-                </div>
-
+                <!--   </div> row --> 
+<!--                 </div>
+ -->
               </div> <!-- page-content -->
             </div> <!-- page-scroll  -->
           </div>
         </div> <!-- row -->
       </div>
-    </div>
+    </div> 
 
     <!-- 
     ====================
