--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <i class="icon dark-color theme-after ti-mobile"></i>
                         <div class="feature-content">
                           <h5 class="dark-color">Social Activist</h5>
-                          <p>social activities helps me bcodetter understand the world and helping people in need makes me more confident so I am social activist and is a member of many clubs and trying to make world a better place to live for everyone. </p>
+                          <p>social activities helps me better understand the world and helping people in need makes me more confident so I am social activist and is a member of many clubs and trying to make world a better place to live for everyone. </p>
                         </div>
                       </div>
                     </div> <!-- col -->
