--- a/index.html
+++ b/index.html
@@ -197,8 +197,9 @@
                       <div class="feature-box">
                         <i class="icon dark-color theme-after ti-mobile"></i>
                         <div class="feature-content">
-                          <h5 class="dark-color">Social Activist</h5>
-                          <p>social activities helps me better understand the world and helping people in need makes me more confident so I am social activist and is a member of many clubs and trying to make world a better place to live for everyone. </p>
+                          <h5 class="dark-color">Wingman</h5>
+                          <p>Working as a wingman in MAD(Make a difference) NGO and looking after kids who needs special attention from our society
+     </p>
                         </div>
                       </div>
                     </div> <!-- col -->
