some experience changed

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                                 project with Amazing UI <br />Built suitable UI
                                 for Indian Crypto exchange with fast streaming
                                 data <br />created Exchange components in React,
-                                Redux and Graphql.
+                                Redux and REST API.
                               </p>
                             </div>
                           </li>
