about me changed

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                         <p class="m-0px">
                           I am a software engineer having high interest in
                           cryptocurrecny trading and is in the industry from
-                          last three years .I am a public speaker ans has spoken
-                          in many conferences
+                          last 4.5 years .I am a public speaker ans has spoken
+                          in many conferences.
                         </p>
                       </div>
                       <!-- about-text -->
@@ -286,9 +286,9 @@
                           <div class="feature-content">
                             <h5 class="dark-color">Meditation and Yoga</h5>
                             <p>
-                              one thing that I am mad about is yoga and
-                              meditation. all my free time if I have any will go
-                              into meditation and yoga retreats. you probably got the topic if you want to break the ice.😃
+                              I really love spending my free time doing yoga and 
+                              I can talk about the importance of meditation for hours.
+                              you probably got the topic if you want to break the ice.😃
                             </p>
                           </div>
                         </div>
