some static spelling mistake correction

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <p class="m-0px">
                           I am a software engineer having high interest in
                           cryptocurrecny trading and is in the industry from
-                          last 4.5 years .I am a public speaker ans has spoken
+                          last 4.5 years .I am a public speaker and has spoken
                           in many conferences.
                         </p>
                       </div>
@@ -200,7 +200,7 @@
                               class="icon dark-color theme-after ti-stack-overflow"
                             ></i>
                             <div class="feature-content">
-                              <h5 class="dark-color">Development</h5>
+                              <h5 class="dark-color">Developer</h5>
                               <p>
                                 I am proficient in frontend frameworks and love
                                 developing new ideas. check out resume tab for
@@ -215,12 +215,10 @@
                           <div class="feature-box">
                             <i class="icon dark-color theme-after ti-bar-chart"></i>
                             <div class="feature-content">
-                              <h5 class="dark-color">Cryptocurrency Trader</h5>
+                              <h5 class="dark-color">Trader and Technical Analyst</h5>
                               <p>
                                 I am currently actively involved in
-                                cryptocurrency trading and have a sound
-                                knowledge of all cryptocurrencies and how
-                                trading and blockchain works.
+                                cryptocurrency and stock trading and have a sound knowledge of financial markets
                               </p>
                             </div>
                           </div>
@@ -259,8 +257,7 @@
                               <p>
                                 Public speaking gives me access to share my
                                 knowledge and ideas with other people So I love
-                                to speak publicaly on topics related to
-                                development ,Trading and social cause
+                                to speak publicaly on development ,trading and social cause
                               </p>
                             </div>
                           </div>
