changes for apertum job

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                               <p>
                                 Public speaking gives me access to share my
                                 knowledge and ideas with other people So I love
-                                to speak publicaly on development ,trading and social cause
+                                to speak publicaly on development, trading and social cause
                               </p>
                             </div>
                           </div>
@@ -423,17 +423,35 @@
                           <li>
                             <div class="r-name">
                               <i class="theme-bg ti-briefcase"></i>
-                              <span class="dark-color">Joveo</span>
-                              <label>SEPT 2019 - PRESENT</label>
+                              <span class="dark-color">Apertum</span>
+                              <label>August 2020 - PRESENT</label>
                             </div>
                             <div class="r-info">
                               <p>
-                                Building suitable UI for Joveo product using
+                                Building Interactive UI components for apertum product using
+                                vueJs <br />
+                                Responsible for writing and maintaining code
+                                quality<br />
+                                Working on integrating bank accounts and bank cards Rest API for payments and withdrawals 
+                              </p>
+                            </div>
+                          </li>
+
+                          <li>
+                            <div class="r-name">
+                              <i class="theme-bg ti-briefcase"></i>
+                              <span class="dark-color">Joveo</span>
+                              <label>SEPT 2019 - July 2020</label>
+                            </div>
+                            <div class="r-info">
+                              <p>
+                                Built suitable UI for Joveo product using
                                 angular and Javascript <br />
                                 Responsible for writing and maintaining code
                                 quality<br />
                                 Worked on internationalizing the joveo
-                                application
+                                application<br/>
+                                Worked on Bulk edit functionality for entire product.
                               </p>
                             </div>
                           </li>
@@ -526,7 +544,7 @@
                         <div class="skills">
                           <div class="progress-lt">
                             <h6>Algorithms and Data Structures</h6>
-                            <span class="theme-bg">60%</span>
+                            <span class="theme-bg">70%</span>
                             <div class="progress">
                               <div
                                 class="progress-bar"
@@ -565,7 +583,7 @@
 
                           <div class="progress-lt">
                             <h6>CSS3</h6>
-                            <span class="theme-bg">85%</span>
+                            <span class="theme-bg">80%</span>
                             <div class="progress">
                               <div
                                 class="progress-bar"
@@ -609,11 +627,11 @@
                           <!-- /progress-lt -->
                           <div class="progress-lt">
                             <h6>Vue</h6>
-                            <span class="theme-bg">30%</span>
+                            <span class="theme-bg">71%</span>
                             <div class="progress">
                               <div
                                 class="progress-bar"
-                                style="width: 30%;"
+                                style="width: 71%;"
                               ></div>
                               <!-- /progress-bar -->
                             </div>
@@ -1115,7 +1133,7 @@
                           Say Something
                         </h4>
                         If you would like to get in touch, please shoot me an
-                        email at me@Kiran.cc or Ping me directly on
+                        email at me@Kiran.cc or ping me directly on
                         <!-- <a
                           href="https://join.slack.com/t/cryptocandleindia/shared_invite/enQtNTUzMDAwODM1MDI2LWY0MWRlNDlkNTc5YjY5YmQxZTNkZTQ1YjJjM2M0YTUyYmRiOTMwNWVlOWYxYjM2ZTM1ZmJhYzhjMDJmOTllNzk"
                         > -->
