[feat] adding slack project in portflio

--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                           <div class="portfolio-img">
                             <a href="index.html#">
                               <img
-                                src="static/img/covidharyana.png"
+                                src="static/img/slack.png"
                                 title=""
                                 alt=""
                                 height="180"
@@ -755,12 +755,12 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                                   </a> -->
                                 <a
                                   style="font-style: italic; color:antiquewhite"
-                                  href="https://covidharyana.com"
+                                  href="https://slack-c613a.web.app/"
                                 >
                                   visit
                                 </a>
                                 <a
-                                  href="https://github.com/kirandeep123/Covid19Haryana"
+                                  href="https://github.com/kirandeep123/slack"
                                   >Code</a
                                 >
                               </div>
@@ -770,9 +770,9 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                           </div>
 
                           <div class="portfolio-info">
-                            <h5>covidharyana</h5>
+                            <h5>Slack 2.0</h5>
                             <span
-                              >Covid Statistics in my state (Haryana , India )
+                              >Slack clone having slack like features where various members can chat simultaneously
                             </span>
                           </div>
                         </div>
