--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
           <div class="row no-gutters full-screen">
             <div class="col-lg-3 col-xl-4 blue-bg">
               <div class="d-flex align-items-end home-user-avtar v-center-box">
-                <img src="static/img/user.png" title="" alt="" />
+                <img src="static/img/1.jpg" title="" alt="" />
               </div>
             </div>
             <div class="col-lg-9 col-xl-8">
@@ -198,16 +198,13 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                 -->
                   <div class="row">
                     <div class="col-md-4">
-                      <img src="static/img/my-pic.jpg" title="" alt="" />
+                      <img src="static/img/2.jpg" title="" alt="" />
                     </div>
                     <div class="col-md-8 md-m-30px-t">
                       <div class="about-text">
-                        <h3 class="dark-color">I'm Kirandeep Kaur</h3>
+                        <h3 class="dark-color">Hello, I'm Kirandeep Kaur</h3>
                         <p class="m-0px">
-                          I am a software engineer having high interest in
-                          cryptocurrecny trading and is in the industry from
-                          last 4.5 years .I am a public speaker and has spoken
-                          in many conferences.
+                         Software Engineer who talks about spirituality and mental health 
                         </p>
                       </div>
                       <!-- about-text -->
@@ -219,18 +216,15 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                               class="icon dark-color theme-after ti-stack-overflow"
                             ></i>
                             <div class="feature-content">
-                              <h5 class="dark-color">Developer</h5>
+                              <h5 class="dark-color">ex-Frontend software engineer</h5>
                               <p>
-                                I am proficient in frontend frameworks and love
-                                developing new ideas. check out resume tab for
-                                details
-                              </p>
+                                I've worked in the industry for about eight years as a frontend engineer. Recently, I left my job because I couldn't find any meaning in the work I was doing. I embarked on a journey to discover my true passion and purpose and realized that my passion lies in photography. I now talk about mental health and spirituality.                            </p>
                             </div>
                           </div>
                         </div>
                         <!-- col -->
 
-                        <div class="col-md-6 col-sm-6 m-30px-b">
+                        <!-- <div class="col-md-6 col-sm-6 m-30px-b">
                           <div class="feature-box">
                             <i class="icon dark-color theme-after ti-bar-chart"></i>
                             <div class="feature-content">
@@ -241,7 +235,7 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                               </p>
                             </div>
                           </div>
-                        </div>
+                        </div> -->
                         <!-- col -->
 
                         <div class="col-md-6 col-sm-6 m-30px-b">
@@ -272,17 +266,14 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                               class="icon dark-color theme-after ti-microphone"
                             ></i>
                             <div class="feature-content">
-                              <h5 class="dark-color">Public speaker</h5>
+                              <h5 class="dark-color">Film Making</h5>
                               <p>
-                                Public speaking gives me access to share my
-                                knowledge and ideas with other people So I love
-                                to speak publicaly on development, trading and social cause
-                              </p>
+                                Filmmaking is my passion, and I love videography. I have two YouTube channels: one where I talk about mental health and spirituality, and another where I upload frontend-related content but is not very active these days.                              </p>
                             </div>
                           </div>
                         </div>
 
-                        <div class="col-md-6 col-sm-6 m-30px-b">
+                        <!-- <div class="col-md-6 col-sm-6 m-30px-b">
                           <div class="feature-box">
                             <i class="icon dark-color theme-after ti-user"></i>
                             <div class="feature-content">
@@ -294,7 +285,7 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                               </p>
                             </div>
                           </div>
-                        </div>
+                        </div> -->
                      
                           <div class="col-md-6 col-sm-6 m-30px-b">
                         <div class="feature-box">
@@ -303,8 +294,7 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                             <h5 class="dark-color">Meditation and Yoga</h5>
                             <p>
                               I really love spending my free time doing yoga and 
-                              I can talk about the importance of meditation for hours.
-                              you probably got the topic if you want to break the ice.😃
+                              I can talk about the importance of solitude for hours.
                             </p>
                           </div>
                         </div>
@@ -443,15 +433,15 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                             <div class="r-name">
                               <i class="theme-bg ti-briefcase"></i>
                               <span class="dark-color">Apertum</span>
-                              <label>August 2020 - PRESENT</label>
+                              <label>August 2020 - April 2024</label>
                             </div>
                             <div class="r-info">
                               <p>
-                                Building Interactive UI components for apertum product using
+                                Built Interactive UI components for apertum product using
                                 vueJs <br />
                                 Responsible for writing and maintaining code
                                 quality<br />
-                                Working on integrating bank accounts and bank cards Rest API for payments and withdrawals 
+                                Worked on integrating bank accounts and bank cards Rest API for payments and withdrawals 
                               </p>
                             </div>
                           </li>
@@ -681,7 +671,7 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
           <div class="row no-gutters">
             <div
               class="col-lg-3 col-xl-4 page-title"
-              style="background-image: url('static/img/mylittleangel.jpg'); "
+              style="background-image: url('static/img/1.jpg'); "
             >
               <div class="v-center-box d-flex align-items-end">
                 <h2>My Projects</h2>
@@ -1159,7 +1149,10 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                         <a
                           href="https://www.linkedin.com/in/kirandeep-kaur-2aa312106/"
                           >LinkedIn</a
-                        >
+                        > or  <a
+                        href="https://www.instagram.com/kirandeep_kaur93/"
+                        >Instagram</a
+                      >
                         for active communications
                       </div>
                     </div>
